syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.stochastics.input";

import "google/protobuf/any.proto";


message RandomNumberGeneratorIdInput {
    google.protobuf.Any id = 1;
}

message WellStateInput {
    int64 seed = 1;
    optional int32 index = 2;
    optional bytes vArray = 3;
}

message RandomNumberGeneratorMapInput {
    RandomNumberGeneratorIdInput randomNumberGeneratorId = 1;
    WellStateInput wellState = 2;
}

message StochasticsPluginDataInput {
    WellStateInput wellState = 1;
    repeated RandomNumberGeneratorMapInput randomNumberGeneratorIds = 2;
}

